--- a/ListJuegos.html
+++ b/ListJuegos.html
@@ -82,7 +82,7 @@
         <h3>
             Stardew Valley
         </h3>
-        <p><a href="Trucos/TrucGtaSa.html"><img src="Img/Caratulas/StardewValley_CA.png" alt="" class=" CTIsaac"></a> <a
+        <p><a href="Juegos/StardewValley/StardewValley.html"><img src="Img/Caratulas/StardewValley_CA.png" alt="" class=" CTIsaac"></a> <a
                 href="JuegosE/BindingOfIsaac.html"></a><br><br> ¡Stardew Valley es un juego de rol de vida rural
             abierto! Has heredado la antigua parcela agrícola de tu abuelo en Stardew Valley. Armado con herramientas de
             segunda mano y algunas monedas, se dispuso a comenzar su nueva vida. ¿Puedes aprender a vivir de la tierra y
