--- a/Trucos.html
+++ b/Trucos.html
@@ -60,7 +60,7 @@
         <h3>
             Grand Theft Auto San Andreas
         </h3>
-        <p><a href="Juegos/GtaSa/GtaSa.html"><img src="Img/Caratulas/GtaSa_CA.jpg" alt="" class=" CTIsaac"></a> <a
+        <p><a href="Trucos/TrucGtaSa.html"><img src="Img/Caratulas/GtaSa_CA.jpg" alt="" class=" CTIsaac"></a> <a
                 href="JuegosE/BindingOfIsaac.html"></a><br><br> San Andreas es un videojuego de acción-aventura de mundo
             abierto desarrollado por Rockstar North y publicado por Rockstar Games.San Andreas fue lanzado originalmente
             para PlayStation 2 el 26 de octubre de 2004, aunque posteriormente se publicaron distintas versiones, tanto
